<resources>
    <string name="app_name">SpeechToText</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="welcome">Welcome</string>
    <string name="click_to_start">Click to start</string>
    <string name="we_re_glad_that_you_are_here">We’re glad that \nyou are here</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="home_fragment">home_fragment</string>
    <string name="language_fragment">language_fragment</string>
    <string name="saved_fragment">saved_fragment</string>
    <string name="settings_fragment">settings_fragment</string>
    <string name="home">Home</string>
    <string name="languages">Languages</string>
    <string name="saved_notes">Saved Notes</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate us</string>
    <string name="more_app">More App</string>
    <string name="about">About</string>
    <string name="press_the_mic">Press the mic and start speaking</string>
    <string name="stop_the_mic">Press the mic and stop speaking</string>
    <string name="press_the_keyboard">Press the keyboard and type</string>
    <string name="press_to_scan_doc">Press to scan Document</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="copy_text">Copy Text</string>
    <string name="save_text">Save Text</string>
    <string name="convert_to_speech">Convert to Speech</string>
    <string name="save_speech">Save Speech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_saying">Try Saying</string>
    <string name="tap_mic_to_talk">Tap the Mic to Talk</string>
    <string name="change_field_color">Change field color</string>

    <string name="ad_mob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>