<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_fragment"
    android:id="@+id/main_activity_nav_menu">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.project.speechtotext.ui.fragments.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/home_fragment"
        />

    <fragment
        android:id="@+id/language_fragment"
        android:name="com.project.speechtotext.ui.fragments.LanguageFragment"
        tools:layout="@layout/fragment_language"
        android:label="@string/language_fragment"
        />

    <fragment
        android:id="@+id/saved_notes_fragment"
        android:name="com.project.speechtotext.ui.fragments.SavedNotesFragment"
        tools:layout="@layout/fragment_saved_notes"
        android:label="@string/saved_fragment"
        />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.project.speechtotext.ui.fragments.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/settings_fragment"
        />

</navigation>