<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.homeChildFragments.SpeechToTextFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_red_round_corners_8"
                android:gravity="start"
                android:padding="@dimen/_5sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/iv_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mic"
                android:tag="start"
                app:layout_constraintBottom_toBottomOf="@id/et_text"
                app:layout_constraintLeft_toLeftOf="@id/et_text"
                app:layout_constraintRight_toRightOf="@id/et_text"
                app:layout_constraintTop_toBottomOf="@id/et_text" />

            <TextView
                android:id="@+id/tv_press_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_the_mic"
                android:textColor="@color/light_grey_3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_mic" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_press_mic">

                <TextView
                    android:id="@+id/tv_share_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_red_round_corners_8"
                    android:drawablePadding="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/share"
                    android:textColor="@color/color_primary"
                    app:drawableEndCompat="@drawable/ic_share" />

                <TextView
                    android:id="@+id/tv_copy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_red_round_corners_8"
                    android:drawablePadding="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/copy_text"
                    android:textColor="@color/color_primary"
                    app:drawableEndCompat="@drawable/ic_copy_text" />

                <TextView
                    android:id="@+id/tv_save_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_red_round_corners_8"
                    android:drawablePadding="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/save_speech"
                    android:textColor="@color/color_primary"
                    app:drawableEndCompat="@drawable/ic_save_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">

                <TextView
                    android:id="@+id/tv_speech_to_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_to_text"
                    android:layout_weight="0.5"
                    android:textColor="@color/color_primary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="11/22/22"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:layout_weight="0.5"
                    android:textColor="@color/light_grey"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>