<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.EditNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/saved_notes"
            app:titleTextColor="@color/white"
            android:background="@color/color_primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_13sdp"
                >
                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notification"
                    />
                <ImageView
                    android:id="@+id/iv_block_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_block_ads"
                    android:layout_marginStart="@dimen/_13sdp"
                    />
            </LinearLayout>



        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:onClick="onBackArrowClick"
                />

            <TextView
                android:id="@+id/tv_change_field_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_field_color"
                android:layout_weight="0.5"
                android:gravity="end|center"
                android:drawablePadding="@dimen/_5sdp"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_change_field_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_16sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bg_grey_round_corners_3_filled"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >
                <TextView
                    android:id="@+id/tv_note_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Note 1"
                    android:layout_weight="0.9"
                    android:textColor="@color/color_primary"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_red_pencil"
                    android:layout_weight="0.1"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@null"
                android:textSize="15sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end|center"
                >
                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    app:tint="@color/light_grey_3"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />

                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete"
                    android:layout_marginEnd="@dimen/_5sdp"
                    />
            </LinearLayout>


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/banners_add"
            android:layout_width="match_parent"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_id"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>